force-app/main/default/objects/Inventory_History__c/Inventory_History__c.object-meta.xml
<CustomObject>
    <label>Inventory History</label>
    <nameField>
        <displayFormat>IH-{000000000}</displayFormat>
        <label>Inventory History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>