force-app/main/default/objects/Inventory_History__c/fields/Account_Call__c.field-meta.xml
<CustomField>
    <fullName>Account_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Call</label>
    <referenceTo>Account_Call__c</referenceTo>
    <relationshipLabel>Inventory History</relationshipLabel>
    <relationshipName>Inventory_History</relationshipName>
    <type>Lookup</type>
</CustomField>