force-app/main/default/objects/Inventory_History__c/fields/Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity__c</fullName>
    <label>Actual Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>