force-app/main/default/objects/Inventory_History__c/fields/SAP_Extract_Flag__c.field-meta.xml
<CustomField>
    <fullName>SAP_Extract_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Extract Flag</label>
    <type>Checkbox</type>
</CustomField>