force-app/main/default/objects/Inventory_History__c/fields/Sold_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Sold_In_Date__c</fullName>
    <label>Sold In Date</label>
    <type>Date</type>
</CustomField>