force-app/main/default/objects/Inventory_History__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acuvue2</fullName>
            </value>
            <value>
                <fullName>Moist 30 or 90 pack</fullName>
            </value>
            <value>
                <fullName>Vita 6-pack</fullName>
            </value>
            <value>
                <fullName>Vita 12-pack</fullName>
            </value>
            <value>
                <fullName>TruEye 30 or 90 pack</fullName>
            </value>
            <value>
                <fullName>Oasys Sphere 24-Pack</fullName>
            </value>
            <value>
                <fullName>Oasys Sphere 12-Pack</fullName>
            </value>
            <value>
                <fullName>Oasys 1-Week Overnight Use</fullName>
            </value>
            <value>
                <fullName>Oasys 1-Day 90 pack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>