force-app/main/default/objects/Inventory_History__c/validationRules/Sold_In_Date_Cant_be_Greater_that_Today.validationRule-meta.xml
<ValidationRule>
    <fullName>Sold_In_Date_Cant_be_Greater_that_Today</fullName>
    <active>true</active>
    <description>Sold in data should not be greater than today</description>
    <errorConditionFormula>AND(IF(Sold_In_Date__c &gt;   TODAY(),true,false),NOT(ISBLANK( Account__c )))</errorConditionFormula>
    <errorMessage>Sold in data should not be greater than today</errorMessage>
</ValidationRule>